Update authentication tests
